updated cachedir name

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,7 +1,7 @@
 singularity {
   autoMounts = true
   enabled = true
-  cacheDir = "singularity_containers"
+  cacheDir = "containers"
 }
 executor {
   cpus = 30
