--- a/nextflow.config
+++ b/nextflow.config
@@ -1,8 +1,13 @@
 singularity {
-  autoMounts = true
   enabled = true
-  cacheDir = "containers"
+  autoMounts = true
+  cacheDir = "/mnt/slow_storage/containers"
 }
+
 executor {
-  cpus = 30
+    name = "slurm"
+    queue = "short"
+    cpus = 60
+    perCpuMemAllocation = true // 8Gb x CPUs per process
+    
 }
