added apptainer profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,13 +1,11 @@
-singularity {
+apptainer {
   enabled = true
   autoMounts = true
   cacheDir = "/mnt/slow_storage/containers"
 }
 
 executor {
-    name = "slurm"
+    executor = "slurm"
     queue = "short"
     cpus = 60
-    perCpuMemAllocation = true // 8Gb x CPUs per process
-    
 }
