added default resources

--- a/nextflow.config
+++ b/nextflow.config
@@ -5,7 +5,33 @@ apptainer {
 }
 
 executor {
-    executor = "slurm"
-    queue = "short"
-    cpus = 60
+    name = 'slurm'
+    perCpuMemAllocation = true
 }
+
+process {
+      withLabel:process_single {
+        cpus   = 1 
+        memory = 1.GB 
+        time   = 1.h  
+    }
+    withLabel:process_low {
+        cpus   =  2   
+        memory =  12.GB 
+        time   =  2.h  
+    }
+    withLabel:process_medium {
+        cpus   = 6   
+        memory = 36.GB 
+        time   = 6.h   
+    }
+    withLabel:process_high {
+        cpus   = 16    
+        memory = 80.GB 
+        time   = 10.h 
+    }
+    withLabel:process_high_memory {
+        memory = 200.GB 
+    }
+}
+
