added default cachedir and removed executor

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,12 +1,7 @@
 apptainer {
   enabled = true
   autoMounts = true
-  cacheDir = "/mnt/slow_storage/containers"
-}
-
-executor {
-    name = 'slurm'
-    perCpuMemAllocation = true
+  cacheDir = "containers"
 }
 
 process {
