--- a/env.yaml
+++ b/env.yaml
@@ -1,10 +1,21 @@
 channels:
   - conda-forge
   - bioconda
+  - CGR-lab
   - defaults
 dependencies:
   - jupyterlab =4.2.4
   - jupyterlab-myst =2.4.2
+  - pandas =2.2.2
+  - altair =5.4.1
+  - vl-convert-python =1.6.1
+  - humanfriendly =10.0
+  - r-base =4.4.1
+  - r-irkernel =1.3.2
+  - r-vegan =2.6_6.1
+  - r-microviz =0.12.1
+  - bioconductor-phyloseq =1.46.0
   - nextflow =24.04.4
   - apptainer =1.3.2
   - awscli =2.17.28
+  - bash_kernel =0.9.3
