--- a/nextflow.config
+++ b/nextflow.config
@@ -1,36 +1,45 @@
+manifest {
+    name            = 'metagenlab/MeSS-figures'
+    author          = """Farid Chaabane, Trestan Pillonel, Claire Bertelli"""
+    homePage        = 'https://github.com/metagenlab/MeSS-figures'
+    description     = """Supplementary figures and scripts for the MeSS paper"""
+    mainScript      = 'main.nf'
+    nextflowVersion = '!>=24.04.4'
+    version         = '1.0'
+}
+
 params {
-    ext =  "{R1,R2}"
+    ext = "{R1,R2}"
 }
 
 apptainer {
-  enabled = true
-  autoMounts = true
-  cacheDir = "containers"
+    enabled    = true
+    autoMounts = true
+    cacheDir   = "containers"
 }
 
 process {
-    withLabel:process_single {
-        cpus   = 1 
-        memory = 1.GB 
-        time   = 1.h  
+    withLabel: process_single {
+        cpus   = 1
+        memory = 1.GB
+        time   = 1.h
     }
-    withLabel:process_low {
-        cpus   =  2   
-        memory =  12.GB 
-        time   =  2.h  
+    withLabel: process_low {
+        cpus   = 2
+        memory = 12.GB
+        time   = 2.h
     }
-    withLabel:process_medium {
-        cpus   = 6   
-        memory = 36.GB 
-        time   = 6.h   
+    withLabel: process_medium {
+        cpus   = 6
+        memory = 36.GB
+        time   = 6.h
     }
-    withLabel:process_high {
-        cpus   = 16    
-        memory = 80.GB 
-        time   = 10.h 
+    withLabel: process_high {
+        cpus   = 16
+        memory = 80.GB
+        time   = 10.h
     }
-    withLabel:process_high_memory {
-        memory = 200.GB 
+    withLabel: process_high_memory {
+        memory = 200.GB
     }
 }
-
